err/registrasion.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/registrasion'...
Listing './lib/python3.5/site-packages/registrasion/controllers'...
Listing './lib/python3.5/site-packages/registrasion/migrations'...
Listing './lib/python3.5/site-packages/registrasion/models'...
Compiling './lib/python3.5/site-packages/registrasion/models/commerce.py'...
***   File "./lib/python3.5/site-packages/registrasion/models/commerce.py", line 305
    print reference
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/registrasion/templatetags'...
Listing './lib/python3.5/site-packages/registrasion/tests'...
Compiling './lib/python3.5/site-packages/registrasion/tests/test_ceilings.py'...
***   File "./lib/python3.5/site-packages/registrasion/tests/test_ceilings.py", line 48
    start_time=datetime.datetime(2015, 01, 01, tzinfo=UTC),
                                        ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/registrasion/tests/test_invoice.py'...
***   File "./lib/python3.5/site-packages/registrasion/tests/test_invoice.py", line 79
    self.set_time(datetime.datetime(2015, 01, 01, tzinfo=UTC))
                                           ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/registrasion/tests/test_voucher.py'...
***   File "./lib/python3.5/site-packages/registrasion/tests/test_voucher.py", line 24
    self.set_time(datetime.datetime(2015, 01, 01, tzinfo=UTC))
                                           ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/registrasion-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
